--- a/it/redis/14.redis和mysql双写一致性问题.md
+++ b/it/redis/14.redis和mysql双写一致性问题.md
@@ -1,2 +1,5 @@
 ## redis和mysql双写一致性问题
 答： 一致性问题是分布式系统中常见的问题，包括强一致性和最终一致性。对于强一致性系统，不能使用缓存。
+
+参考：
+- [redis 双写一致性 看一篇成高手系列1](https://blog.csdn.net/hjm4702192/article/details/80518922)
