--- a/it/redis/1.HA架构.md
+++ b/it/redis/1.HA架构.md
@@ -2,6 +2,7 @@
 参考： 
 - [Redis+Twemproxy+HAProxy集群  干货](https://www.cnblogs.com/huanghongbo/p/8698636.html)
 - [https://github.com/twitter/twemproxy/](https://github.com/twitter/twemproxy/)
+- [【原创】那些年用过的Redis集群架构（含面试解析）](https://www.cnblogs.com/rjzheng/p/10360619.html)
 
 使用twemproxy实现redis的集群架构，能够自动分片。
 
