--- a/it/redis/2.redis-cluster原理.md
+++ b/it/redis/2.redis-cluster原理.md
@@ -1,14 +1,18 @@
 ## 2. redis cluster （是否使用过redis集群，集群的原理是什么？）
+参考：
+- [【原创】那些年用过的Redis集群架构（含面试解析）](https://www.cnblogs.com/rjzheng/p/10360619.html)
+
 建议使用redis cluster，官网出品，必属精品；
-原理：
+
+原理：  
 redis sentinel 适用于高可用场景，当master宕机后，提升slave为master，避免单点故障；
 redis cluster 适用于扩展性，当单个redis内存不足时，使用cluster进行分片存储；
 
-优点：
+优点：  
 1. 支持水平扩容；
 2. HA;
 
-缺点：
+缺点：  
 1. 批量操作比较坑，不同的key会分布到不同的节点上，所以不支持事务和批量操作（mset/mget) 等操作；
 
 
