--- a/it/redis/6.为什么使用redis?.md
+++ b/it/redis/6.为什么使用redis?.md
@@ -9,3 +9,6 @@
 (3) 支持事务，操作都是原子性，所谓的原子性就是对数据的更改要么全部执行，要么全部不执行
 
 (4) 丰富的特性：可用于缓存，消息，按key设置过期时间，过期后将会自动删除。
+
+## 参考
+- [【原创】分布式之redis复习精讲](https://www.cnblogs.com/rjzheng/p/9096228.html)
