answer some kafka problems

--- a/it/kafka/1.为什么使用消息队列?.md
+++ b/it/kafka/1.为什么使用消息队列?.md
@@ -1,2 +1,7 @@
 ## 为什么使用消息队列?(消息队列有什么好处?)
 答： 解耦/异步/削峰
+
+![mq架构](image/mq.png)
+
+参考：
+- [【消息队列】关于消息队列的优缺点](https://www.cnblogs.com/756623607-zhang/p/10505492.html)
