answer some kafka questions

--- a/it/kafka/4.kafka是如何保证高可用的?.md
+++ b/it/kafka/4.kafka是如何保证高可用的?.md
@@ -2,3 +2,6 @@
 
 Kafka使用zookeeper保存集群的元数据信息和消费者信息。
 Kafka Broker，集群，主题和分区。
+
+参考：
+- [【消息队列】kafka是如何保证高可用的](https://www.cnblogs.com/756623607-zhang/p/10506360.html)
