answer some kafka problems

--- a/it/kafka/4.kafka是如何保证高可用的?.md
+++ b/it/kafka/4.kafka是如何保证高可用的?.md
@@ -1,7 +1,12 @@
 ## Kafka是如何保证高可用的？
 
-Kafka使用zookeeper保存集群的元数据信息和消费者信息。
-Kafka Broker，集群，主题和分区。
+1. Kafka使用zookeeper来维护集群成员信息（集群的元数据信息和消费者信息）。
+每个broker有一个ID作为唯一标识符，在broker启动时，通过创建临时节点把自己的ID注册到zookeeper中。Kafka组件订阅zookeeper的/brokers/ids路径，当broker加入获退出集群时，就会获得通知。
+
+2. Kafka使用复制机制，当个别节点失效时，仍能保证Kafka的可用性和持久性。
+Kafka只用主题topic来组织数据，每个主题被分为若干个分区partition，每个分区有多个副本。
 
 参考：
 - [【消息队列】kafka是如何保证高可用的](https://www.cnblogs.com/756623607-zhang/p/10506360.html)
+- 《Kafka权威指南》第5章 深入Kafka
+
