--- a/it/kafka/6.kafka是如何保证消息不被重复消费?.md
+++ b/it/kafka/6.kafka是如何保证消息不被重复消费?.md
@@ -2,10 +2,11 @@
 答：
 1. 为何会出现重复消费？
    
-   消费者在读取并处理了消息之后，没有提交偏移量，就宕机了。当继续消费时，重复读取，造成重复消费。
+   消费者在读取并处理了消息之后，没有提交偏移量或者由于宕机获网络问题提交失败。当继续消费时，重复读取，造成重复消费。
 
 2. 如何处理？
    - 保证消息处理的幂等性；
+   - 如果消息处理不是幂等的，需要使用第三方（全局id，redis，mysql）来保存消费记录，并在每次消费前检查；
 
 参考：
 - [【消息队列】kafka是如何保证消息不被重复消费的](https://www.cnblogs.com/756623607-zhang/p/10506909.html)
