answer some questions

--- a/it/kafka/7.kafka是如何保证消息的顺序性?.md
+++ b/it/kafka/7.kafka是如何保证消息的顺序性?.md
@@ -1,2 +1,9 @@
 ## Kafka是如何保证消息的顺序性？
 Kafka能够保证同一个分区内的消息的顺序性。
+
+一个主题，一个分区，一个消费者，多线程处理
+
+
+参考：
+- [【消息队列】如何保证消息的顺序性](https://www.cnblogs.com/756623607-zhang/p/10507452.html)
+
