add some leetcode problems

--- a/it/leetcode/20.有效的括号.md
+++ b/it/leetcode/20.有效的括号.md
@@ -39,6 +39,7 @@
 使用map保存括号信息，使用stack作为辅助空间。
 
 ## 答案
+cpp code:
 ```cpp
 class Solution {
 public:
@@ -73,6 +74,7 @@ public:
 };
 ```
 
+golang code:
 ```golang
 func isValid(s string) bool {
     mapper := map[rune]rune{
