--- a/it/redis/9.redis过期策略和内存淘汰机制?.md
+++ b/it/redis/9.redis过期策略和内存淘汰机制?.md
@@ -4,3 +4,45 @@
 2. 你的数据设置了过期时间，但是时间到了，内存占用率仍然很高，为什么？
 
 答： redis使用定期删除策略和惰性删除策略。
+
+之所以不采用定时删除，因为定时删除占用太多的CPU时间，影响服务器的响应时间和吞吐量；
+
+参考：
+- 《redis设计与实现》
+- [【原创】分布式之redis复习精讲](https://www.cnblogs.com/rjzheng/p/9096228.html)
+
+
+内存淘汰机制：参考`redis.conf`
+
+```
+# MAXMEMORY POLICY: how Redis will select what to remove when maxmemory
+# is reached. You can select one from the following behaviors:
+#
+# volatile-lru -> Evict using approximated LRU, only keys with an expire set.
+# allkeys-lru -> Evict any key using approximated LRU.
+# volatile-lfu -> Evict using approximated LFU, only keys with an expire set.
+# allkeys-lfu -> Evict any key using approximated LFU.
+# volatile-random -> Remove a random key having an expire set.
+# allkeys-random -> Remove a random key, any key.
+# volatile-ttl -> Remove the key with the nearest expire time (minor TTL)
+# noeviction -> Don't evict anything, just return an error on write operations.
+#
+# LRU means Least Recently Used
+# LFU means Least Frequently Used
+#
+# Both LRU, LFU and volatile-ttl are implemented using approximated
+# randomized algorithms.
+#
+# Note: with any of the above policies, Redis will return an error on write
+#       operations, when there are no suitable keys for eviction.
+#
+#       At the date of writing these commands are: set setnx setex append
+#       incr decr rpush lpush rpushx lpushx linsert lset rpoplpush sadd
+#       sinter sinterstore sunion sunionstore sdiff sdiffstore zadd zincrby
+#       zunionstore zinterstore hset hsetnx hmset hincrby incrby decrby
+#       getset mset msetnx exec sort
+#
+# The default is:
+#
+# maxmemory-policy noeviction
+```
