update redis-cluster note

--- a/it/redis/2.redis-cluster原理.md
+++ b/it/redis/2.redis-cluster原理.md
@@ -20,3 +20,6 @@ redis cluster 适用于扩展性，当单个redis内存不足时，使用cluster
 以mset/mget为例，可以将key使用hashtag将数据分布到同一个节点上。
 
 如果是使用twemproxy，可以拆分命令，发往不同的节点。
+
+## redis cluster 槽个数是多少？为什么？
+redis共有**16384**个槽，
