add redis solution

--- a/it/redis/15.redis在项目中的应用.md
+++ b/it/redis/15.redis在项目中的应用.md
@@ -5,7 +5,11 @@
 ## 1. 服务注册与发现、配置管理
 使用Redis存储配置信息，以`config:appname:...`为key，以JSON编码的配置信息为value，提供SetConfig/GetConfig接口。
 
+
+
 ## 2. 分布式锁
+应用场景：对象存储项目中，多个接入节点都可以创建bucket，但由于容量、bucket不能重复等限制，一次只能创建一个bucket，需要用到分布式锁。
+
 使用Redis构建分布式锁，`SETNX`命令适合用来实现锁的获取功能，这个命令只会在键不存在的情况下设置值，而值则是一个UUID，防止锁被其他进程获取。
 
 为了防止锁的持有者崩溃而导致的不会自动释放锁，需要对锁添加超时功能。在获得锁后，使用`EXPIRE`命令来为锁设置过期时间，使得Redis能够自动释放超时的锁。
@@ -43,4 +47,6 @@ Redis中的有序集合 ZSET 能够实现延迟任务。
 在有序集合中，分值设置为任务的执行时间，可立即执行的任务被直接插入到任务队列中。
 
 ## 4. 缓存
+分布式对象存储项目中，每一个请求都需要进行用户鉴权，用户信息是保存在mysql数据库中的，但如果每个请求都访问一次数据库，那么会对数据库造成大量的并发操作。所以，采用redis作为缓存，① 利用redis的高并发、高性能的优势； ② 缓存热点用户的信息，用户信息会保存30mins过期；
+
 
